--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
   },
   "dependencies": {
     "gatsby": "^2.23.12",
+    "gatsby-image": "^2.4.12",
     "gatsby-plugin-manifest": "^2.4.17",
     "gatsby-plugin-offline": "^3.2.16",
     "gatsby-plugin-postcss": "^2.3.9",
+    "gatsby-plugin-sharp": "^2.6.17",
+    "gatsby-source-filesystem": "^2.3.18",
+    "gatsby-transformer-sharp": "^2.5.10",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0"
